[tool.poetry]
name = "pinbot"
version = "2.1.17"
description = "Pinbot!"
authors = ["Zenith <z@zenith.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
aurflux = "*"
"discord.py" = "^1.4.1"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
"discord.py-stubs" = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
